rules/exposure-to-internet-via-gateway-api/test/failed_with_httproute-istio/input/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"gateway.networking.k8s.io/v1beta1","kind":"HTTPRoute","metadata":{"annotations":{},"name":"http","namespace":"default"},"spec":{"hostnames":["httpbin.example.com"],"parentRefs":[{"name":"gateway","namespace":"istio-ingress"}],"rules":[{"backendRefs":[{"name":"httpbin","port":8000}],"matches":[{"path":{"type":"PathPrefix","value":"/get"}}]}]}}
  creationTimestamp: "2024-04-14T07:41:31Z"
  generation: 1
  name: http
  namespace: default
  resourceVersion: "2647"
  uid: b7c1d09f-0cf8-4fc6-ada8-ec415b463038
spec:
  hostnames:
  - httpbin.example.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
    namespace: istio-ingress
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: httpbin
      port: 8000
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /get
status:
  parents:
  - conditions:
    - lastTransitionTime: "2024-04-14T07:41:38Z"
      message: ""
      observedGeneration: 1
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2024-04-14T07:41:38Z"
      message: ""
      observedGeneration: 1
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    controllerName: solo.io/gloo-gateway
    parentRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
      namespace: istio-ingress
  - conditions:
    - lastTransitionTime: "2024-04-14T07:41:38Z"
      message: Route was valid
      observedGeneration: 1
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2024-04-14T07:41:38Z"
      message: All references resolved
      observedGeneration: 1
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    controllerName: istio.io/gateway-controller
    parentRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
      namespace: istio-ingress
