rules/exposure-to-internet-via-gateway-api/test/failed_with_httproute-istio/input/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"httpbin","service":"httpbin"},"name":"httpbin","namespace":"default"},"spec":{"ports":[{"name":"http","port":8000,"targetPort":8080}],"selector":{"app":"httpbin"}}}
  creationTimestamp: "2024-04-14T07:39:35Z"
  labels:
    app: httpbin
    service: httpbin
  name: httpbin
  namespace: default
  resourceVersion: "2328"
  uid: 5b675069-a387-4fa4-83b6-8fd25462f714
spec:
  clusterIP: 10.96.126.137
  clusterIPs:
  - 10.96.126.137
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8080
  selector:
    app: httpbin
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
